--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
